# Agent-Speaker

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
agents/amp/: mcp.json
agents/claude/: speaker.md
agents/claude/commands/: speak-start.md  speak-stop.md
agents/crush/: crush.json  speaker.md
agents/kiro/: speaker.json
agents/kiro/speaker/: persona.md
agents/mcp/: speaker-server.py
docs/: agent-install.md  architecture.md  c4-architecture.md  codemap.md  configuration.md  mcp.md  runbook.md  troubleshooting.md  use-cases.md
docs/artefacts/: index.html
scripts/: install.sh
src/speaker/: __init__.py  cli.py  engine.py  mcp_server.py
tests/: conftest.py  test_cli.py  test_engine.py  test_mcp.py
